--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -75,6 +75,7 @@
     <ClCompile Include="..\game\shared\collisionproperty.cpp" />
     <ClCompile Include="..\game\shared\entitylist_base.cpp" />
     <ClCompile Include="..\game\shared\util_shared.cpp" />
+    <ClCompile Include="..\game\shared\vscript_shared.cpp" />
     <ClCompile Include="..\inputsystem\inputsystem.cpp" />
     <ClCompile Include="..\launcher\IApplication.cpp" />
     <ClCompile Include="..\launcher\launcher.cpp" />
@@ -131,11 +132,6 @@
     <ClCompile Include="..\rtech\rtech_game.cpp" />
     <ClCompile Include="..\rtech\rui\rui.cpp" />
     <ClCompile Include="..\rtech\stryder\stryder.cpp" />
-    <ClCompile Include="..\squirrel\sqapi.cpp" />
-    <ClCompile Include="..\squirrel\sqinit.cpp" />
-    <ClCompile Include="..\squirrel\sqscript.cpp" />
-    <ClCompile Include="..\squirrel\sqstdaux.cpp" />
-    <ClCompile Include="..\squirrel\sqvm.cpp" />
     <ClCompile Include="..\thirdparty\imgui\misc\imgui_utility.cpp" />
     <ClCompile Include="..\tier0\commandline.cpp" />
     <ClCompile Include="..\tier0\cpu.cpp" />
@@ -174,6 +170,11 @@
     <ClCompile Include="..\vphysics\physics_collide.cpp" />
     <ClCompile Include="..\vphysics\QHull.cpp" />
     <ClCompile Include="..\vpklib\packedstore.cpp" />
+    <ClCompile Include="..\vscript\languages\squirrel_re\sqstdlib\sqstdaux.cpp" />
+    <ClCompile Include="..\vscript\languages\squirrel_re\squirrel\sqapi.cpp" />
+    <ClCompile Include="..\vscript\languages\squirrel_re\squirrel\sqvm.cpp" />
+    <ClCompile Include="..\vscript\languages\squirrel_re\vsquirrel.cpp" />
+    <ClCompile Include="..\vscript\vscript.cpp" />
     <ClCompile Include="..\vstdlib\autocompletefilelist.cpp" />
     <ClCompile Include="..\vstdlib\callback.cpp" />
     <ClCompile Include="..\vstdlib\completion.cpp" />
@@ -270,6 +271,7 @@
     <ClInclude Include="..\game\shared\takedamageinfo.h" />
     <ClInclude Include="..\game\shared\usercmd.h" />
     <ClInclude Include="..\game\shared\util_shared.h" />
+    <ClInclude Include="..\game\shared\vscript_shared.h" />
     <ClInclude Include="..\inputsystem\ButtonCode.h" />
     <ClInclude Include="..\inputsystem\inputsystem.h" />
     <ClInclude Include="..\launcher\IApplication.h" />
@@ -358,7 +360,6 @@
     <ClInclude Include="..\public\isnapshotmgr.h" />
     <ClInclude Include="..\public\isurfacesystem.h" />
     <ClInclude Include="..\public\ivrenderview.h" />
-    <ClInclude Include="..\public\ivscript.h" />
     <ClInclude Include="..\public\materialsystem\shader_vcs_version.h" />
     <ClInclude Include="..\public\model_types.h" />
     <ClInclude Include="..\public\networkvar.h" />
@@ -425,13 +426,6 @@
     <ClInclude Include="..\rtech\rtech_game.h" />
     <ClInclude Include="..\rtech\rui\rui.h" />
     <ClInclude Include="..\rtech\stryder\stryder.h" />
-    <ClInclude Include="..\squirrel\sqapi.h" />
-    <ClInclude Include="..\squirrel\sqinit.h" />
-    <ClInclude Include="..\squirrel\sqscript.h" />
-    <ClInclude Include="..\squirrel\sqstate.h" />
-    <ClInclude Include="..\squirrel\sqstdaux.h" />
-    <ClInclude Include="..\squirrel\sqtype.h" />
-    <ClInclude Include="..\squirrel\sqvm.h" />
     <ClInclude Include="..\studiorender\studiorendercontext.h" />
     <ClInclude Include="..\thirdparty\detours\include\detours.h" />
     <ClInclude Include="..\thirdparty\detours\include\detver.h" />
@@ -529,6 +523,12 @@
     <ClInclude Include="..\vpc\rson.h" />
     <ClInclude Include="..\vphysics\QHull.h" />
     <ClInclude Include="..\vpklib\packedstore.h" />
+    <ClInclude Include="..\vscript\languages\squirrel_re\include\sqstate.h" />
+    <ClInclude Include="..\vscript\languages\squirrel_re\include\sqstdaux.h" />
+    <ClInclude Include="..\vscript\languages\squirrel_re\include\squirrel.h" />
+    <ClInclude Include="..\vscript\languages\squirrel_re\include\sqvm.h" />
+    <ClInclude Include="..\vscript\languages\squirrel_re\vsquirrel.h" />
+    <ClInclude Include="..\vscript\vscript.h" />
     <ClInclude Include="..\vstdlib\autocompletefilelist.h" />
     <ClInclude Include="..\vstdlib\callback.h" />
     <ClInclude Include="..\vstdlib\completion.h" />
