--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -40,9 +40,6 @@
     <Filter Include="sdk\server">
       <UniqueIdentifier>{525505fd-c8bb-453c-8cce-e11123499ae9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sdk\squirrel">
-      <UniqueIdentifier>{10a04e38-fd13-476b-92ea-ebbe60803ef6}</UniqueIdentifier>
-    </Filter>
     <Filter Include="thirdparty">
       <UniqueIdentifier>{7977cef5-28c7-40ca-be44-394d9f1b75de}</UniqueIdentifier>
     </Filter>
@@ -244,6 +241,27 @@
     <Filter Include="sdk\engine\shared">
       <UniqueIdentifier>{f3335ce8-0956-4d3c-9d12-ca2bd5646d8c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\public\vscript">
+      <UniqueIdentifier>{306af380-9492-405e-975f-b4d8f8edb33c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\vscript">
+      <UniqueIdentifier>{06713de9-e726-48d4-876f-6be67af39e24}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\vscript\languages">
+      <UniqueIdentifier>{0cf85fa4-0555-46fa-85d3-810380aa3278}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\vscript\languages\squirrel_re">
+      <UniqueIdentifier>{5d93bf0c-25a1-486d-bdf8-4de0f2bf1b7d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\vscript\languages\squirrel_re\squirrel">
+      <UniqueIdentifier>{8ae5d70b-05b8-46db-8546-0a1d0cd207f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\vscript\languages\squirrel_re\sqstdlib">
+      <UniqueIdentifier>{d4aaa740-265b-4125-8b3d-9439a3d4bdf8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\vscript\languages\squirrel_re\include">
+      <UniqueIdentifier>{e0afe585-b0c4-4647-af69-1fa709d7e080}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\vengineclient_impl.cpp">
@@ -288,12 +306,6 @@
     <ClCompile Include="..\server\vengineserver_impl.cpp">
       <Filter>sdk\server</Filter>
     </ClCompile>
-    <ClCompile Include="..\squirrel\sqvm.cpp">
-      <Filter>sdk\squirrel</Filter>
-    </ClCompile>
-    <ClCompile Include="..\squirrel\sqapi.cpp">
-      <Filter>sdk\squirrel</Filter>
-    </ClCompile>
     <ClCompile Include="..\vgui\vgui_fpspanel.cpp">
       <Filter>sdk\vgui</Filter>
     </ClCompile>
@@ -335,9 +347,6 @@
     </ClCompile>
     <ClCompile Include="..\mathlib\IceKey.cpp">
       <Filter>sdk\mathlib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\squirrel\sqinit.cpp">
-      <Filter>sdk\squirrel</Filter>
     </ClCompile>
     <ClCompile Include="..\vpklib\packedstore.cpp">
       <Filter>sdk\vpklib</Filter>
@@ -492,9 +501,6 @@
     <ClCompile Include="..\game\shared\animation.cpp">
       <Filter>sdk\game\shared</Filter>
     </ClCompile>
-    <ClCompile Include="..\squirrel\sqstdaux.cpp">
-      <Filter>sdk\squirrel</Filter>
-    </ClCompile>
     <ClCompile Include="..\engine\clockdriftmgr.cpp">
       <Filter>sdk\engine</Filter>
     </ClCompile>
@@ -521,9 +527,6 @@
     </ClCompile>
     <ClCompile Include="..\tier1\strtools.cpp">
       <Filter>sdk\tier1</Filter>
-    </ClCompile>
-    <ClCompile Include="..\squirrel\sqscript.cpp">
-      <Filter>sdk\squirrel</Filter>
     </ClCompile>
     <ClCompile Include="..\mathlib\sha1.cpp">
       <Filter>sdk\mathlib</Filter>
@@ -762,6 +765,24 @@
     <ClCompile Include="..\engine\shared\shared_rcon.cpp">
       <Filter>sdk\engine\shared</Filter>
     </ClCompile>
+    <ClCompile Include="..\vscript\vscript.cpp">
+      <Filter>sdk\vscript</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game\shared\vscript_shared.cpp">
+      <Filter>sdk\game\shared</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vscript\languages\squirrel_re\squirrel\sqvm.cpp">
+      <Filter>sdk\vscript\languages\squirrel_re\squirrel</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vscript\languages\squirrel_re\squirrel\sqapi.cpp">
+      <Filter>sdk\vscript\languages\squirrel_re\squirrel</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vscript\languages\squirrel_re\sqstdlib\sqstdaux.cpp">
+      <Filter>sdk\vscript\languages\squirrel_re\sqstdlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vscript\languages\squirrel_re\vsquirrel.cpp">
+      <Filter>sdk\vscript\languages\squirrel_re</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -817,12 +838,6 @@
     </ClInclude>
     <ClInclude Include="..\server\vengineserver_impl.h">
       <Filter>sdk\server</Filter>
-    </ClInclude>
-    <ClInclude Include="..\squirrel\sqapi.h">
-      <Filter>sdk\squirrel</Filter>
-    </ClInclude>
-    <ClInclude Include="..\squirrel\sqvm.h">
-      <Filter>sdk\squirrel</Filter>
     </ClInclude>
     <ClInclude Include="..\thirdparty\detours\include\detver.h">
       <Filter>thirdparty\detours\include</Filter>
@@ -892,9 +907,6 @@
     </ClInclude>
     <ClInclude Include="..\mathlib\parallel_for.h">
       <Filter>sdk\mathlib</Filter>
-    </ClInclude>
-    <ClInclude Include="..\squirrel\sqinit.h">
-      <Filter>sdk\squirrel</Filter>
     </ClInclude>
     <ClInclude Include="..\core\resource.h">
       <Filter>core</Filter>
@@ -1124,9 +1136,6 @@
     <ClInclude Include="..\rtech\stryder\stryder.h">
       <Filter>sdk\rtech\stryder</Filter>
     </ClInclude>
-    <ClInclude Include="..\squirrel\sqtype.h">
-      <Filter>sdk\squirrel</Filter>
-    </ClInclude>
     <ClInclude Include="..\public\inetchannel.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
@@ -1334,9 +1343,6 @@
     <ClInclude Include="..\thirdparty\nlohmann\detail\output\binary_writer.hpp">
       <Filter>thirdparty\nlohmann\detail\output</Filter>
     </ClInclude>
-    <ClInclude Include="..\squirrel\sqstdaux.h">
-      <Filter>sdk\squirrel</Filter>
-    </ClInclude>
     <ClInclude Include="..\engine\clockdriftmgr.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
@@ -1351,9 +1357,6 @@
     </ClInclude>
     <ClInclude Include="..\public\inetmsghandler.h">
       <Filter>sdk\public</Filter>
-    </ClInclude>
-    <ClInclude Include="..\squirrel\sqstate.h">
-      <Filter>sdk\squirrel</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\server\sv_main.h">
       <Filter>sdk\engine\server</Filter>
@@ -1381,9 +1384,6 @@
     </ClInclude>
     <ClInclude Include="..\vpc\kvleaktrace.h">
       <Filter>sdk\vpc</Filter>
-    </ClInclude>
-    <ClInclude Include="..\squirrel\sqscript.h">
-      <Filter>sdk\squirrel</Filter>
     </ClInclude>
     <ClInclude Include="..\mathlib\sha1.h">
       <Filter>sdk\mathlib</Filter>
@@ -1464,9 +1464,6 @@
       <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\public\iclientrenderable.h">
-      <Filter>sdk\public</Filter>
-    </ClInclude>
-    <ClInclude Include="..\public\ivscript.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\game\client\viewrender.h">
@@ -1930,6 +1927,30 @@
     </ClInclude>
     <ClInclude Include="..\engine\shared\shared_rcon.h">
       <Filter>sdk\engine\shared</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\vscript\ivscript.h">
+      <Filter>sdk\public\vscript</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vscript\vscript.h">
+      <Filter>sdk\vscript</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\shared\vscript_shared.h">
+      <Filter>sdk\game\shared</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vscript\languages\squirrel_re\include\sqstdaux.h">
+      <Filter>sdk\vscript\languages\squirrel_re\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vscript\languages\squirrel_re\include\squirrel.h">
+      <Filter>sdk\vscript\languages\squirrel_re\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vscript\languages\squirrel_re\include\sqstate.h">
+      <Filter>sdk\vscript\languages\squirrel_re\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vscript\languages\squirrel_re\include\sqvm.h">
+      <Filter>sdk\vscript\languages\squirrel_re\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vscript\languages\squirrel_re\vsquirrel.h">
+      <Filter>sdk\vscript\languages\squirrel_re</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
