Add filesystem utilities
Filesystem utilities that reduce duplicate code.

--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -714,6 +714,9 @@
     <ClCompile Include="..\vscript\languages\squirrel_re\sqstdlib\sqstdaux.cpp">
       <Filter>sdk\vscript\languages\squirrel_re\sqstdlib</Filter>
     </ClCompile>
+    <ClCompile Include="..\tier2\fileutils.cpp">
+      <Filter>sdk\tier2</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1774,6 +1777,9 @@
     </ClInclude>
     <ClInclude Include="..\vscript\languages\squirrel_re\include\sqstdaux.h">
       <Filter>sdk\vscript\languages\squirrel_re\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier2\fileutils.h">
+      <Filter>sdk\public\tier2</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
