--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -408,6 +408,7 @@
     <ClInclude Include="..\public\tier1\utlsymbol.h" />
     <ClInclude Include="..\public\tier1\utlvector.h" />
     <ClInclude Include="..\public\tier2\curlutils.h" />
+    <ClInclude Include="..\public\tier2\fileutils.h" />
     <ClInclude Include="..\public\tier2\meshutils.h" />
     <ClInclude Include="..\public\tier2\renderutils.h" />
     <ClInclude Include="..\public\tier2\socketcreator.h" />
@@ -663,6 +664,7 @@
     <ClCompile Include="..\tier1\utlbuffer.cpp" />
     <ClCompile Include="..\tier1\utlstring.cpp" />
     <ClCompile Include="..\tier2\curlutils.cpp" />
+    <ClCompile Include="..\tier2\fileutils.cpp" />
     <ClCompile Include="..\tier2\socketcreator.cpp" />
     <ClCompile Include="..\vpc\IAppSystem.cpp" />
     <ClCompile Include="..\vpc\interfaces.cpp" />
