--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1167,6 +1167,9 @@
     <ClInclude Include="..\game\shared\vscript_shared.h">
       <Filter>sdk\game\shared</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\tier2\fileutils.h">
+      <Filter>sdk\public\tier2</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1576,6 +1579,9 @@
     </ClCompile>
     <ClCompile Include="..\game\shared\vscript_shared.cpp">
       <Filter>sdk\game\shared</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier2\fileutils.cpp">
+      <Filter>sdk\tier2</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
